# stance-preservation

./: .gitignore  main.py  pyproject.toml
Data/: data_exploration.py  gemini_labeling_complete.py  gpt_labeling.py  gpt_labeling_complete.py  gpt_labels_exploration.py  translate_to_eng.py
Data/datasets/: English_all_data_clean.csv  Hebrew_stance_dataset_combined.csv  all_data_with_gpt_labels_clean.csv  topic_stance_dataset.csv
scripts/: calculate_majority.py  clean_pipeline.py  finetuning_dicta.py  generate_agreement_heatmap.py  stance_annotator_gui.py  stance_detection_model.py  stance_detection_without_one_topic.py  stance_pipeline.py  topic_detection.py
scripts/labeled/: labeled_topic_data.csv  review_topic_data.csv
scripts/output/: eng_summaries_gemini_2.5_flash.csv  eng_summaries_gemma.csv  eng_summaries_gpt.csv  eng_summaries_gpt_4o_mini.csv  eng_summaries_oss.csv  english_data.json  english_data_merged.csv  fine_tuned_test_merged.csv  stance_noentropy_emd_merged.csv  summaries_gemini_2.5_flash.csv  summaries_gemma.csv  summaries_gpt_4o_mini.csv  summaries_oss.csv  summaries_with_stance.csv  summaries_with_stance_older.csv  summaries_with_stance_older2.csv  test_topic2_merged.csv  test_topic3_merged.csv  test_topic_merged.csv
src/: utils.py
src/models/: __init__.py  bleu.py  emb.py  emd.py  llm.py  nli.py  rouge.py  tf_idf.py
src/utils/: data_utils.py  prompt_utils.py  text_utils.py
tests/: LLM_baseline.py  article_level_statistical_tests.py  external_baseline.py  mean_sentence_article_statistical_tests.py  pipeline_tests.py  score.py  similarity_baselines.py
